[#2184] Strip shared key from PSK credentials
The device registry implementations do no longer include the (secret)
shared key of PSK credentials in the result set of the Management API's
get credentials operation.

Fixes #2184

Conflicts:
	services/device-registry-base/src/test/java/org/eclipse/hono/service/credentials/AbstractCredentialsServiceTest.java
	services/device-registry-file/src/test/java/org/eclipse/hono/deviceregistry/file/FileBasedCredentialsServiceTest.java
	site/homepage/content/release-notes.md
	tests/src/test/java/org/eclipse/hono/tests/registry/CredentialsManagementIT.java

Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>