@@ -12,6 +12,7 @@
  *******************************************************************************/
 package org.eclipse.hono.service.credentials;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
@@ -51,6 +52,7 @@ import org.junit.jupiter.api.function.ThrowingConsumer;
 import io.opentracing.noop.NoopSpan;
 import io.vertx.core.Future;
 import io.vertx.core.Promise;
+import io.vertx.core.json.JsonArray;
 import io.vertx.core.json.JsonObject;
 import io.vertx.junit5.Checkpoint;
 import io.vertx.junit5.VertxTestContext;
@@ -113,135 +115,94 @@ public abstract class AbstractCredentialsServiceTest {
     }
 
     /**
-     * Verifies that the service returns 404 if a client wants to retrieve non-existing credentials.
+     * Assert if the resource version is present.
      *
-     * @param ctx The vert.x test context.
+     * @param result The result to check.
      */
-    @Test
-    public void testGetCredentialsFailsForNonExistingCredentials(final VertxTestContext ctx) {
-
-        final var tenantId = "tenant";
-        final var deviceId = UUID.randomUUID().toString();
-        final var authId = UUID.randomUUID().toString();
-
-        assertGetMissing(ctx, tenantId, deviceId, authId, CredentialsConstants.SECRETS_TYPE_HASHED_PASSWORD, () -> {
-            ctx.completeNow();
-        });
-
-    }
-
-    /**
-     * Verifies that the service returns credentials for an existing device.
-     *
-     * @param ctx The vert.x test context.
-     */
-    @Test
-    public void testGetCredentialsSucceedsForExistingDevice(final VertxTestContext ctx) {
-
-        final var tenantId = "tenant";
-        final var deviceId = UUID.randomUUID().toString();
-        final var authId = UUID.randomUUID().toString();
-
-        assertGetMissing(ctx, tenantId, deviceId, authId, CredentialsConstants.SECRETS_TYPE_HASHED_PASSWORD,
-                () -> getDeviceManagementService()
-                        .createDevice(tenantId, Optional.of(deviceId), new Device(), NoopSpan.INSTANCE)
-                        .onComplete(ctx.succeeding(s -> assertGet(ctx, tenantId, deviceId, authId,
-                                CredentialsConstants.SECRETS_TYPE_HASHED_PASSWORD,
-                                r -> {
-                                    assertEquals(HttpURLConnection.HTTP_OK, r.getStatus());
-                                    assertNotNull(r.getPayload());
-                                    assertTrue(r.getPayload().isEmpty());
-                                },
-                                r -> assertEquals(HttpURLConnection.HTTP_NOT_FOUND, r.getStatus()),
-                                ctx::completeNow))));
-    }
-
-    /**
-     * Creates a PSK type based credential containing a psk secret.
-     *
-     * @param authId The authentication to use.
-     * @param psk The psk to use.
-     * @return The fully populated secret.
-     */
-    public static PskCredential createPSKCredential(final String authId, final String psk) {
-        final PskCredential p = new PskCredential(authId);
-
-        final PskSecret s = new PskSecret();
-        s.setKey(psk.getBytes());
-
-        p.setSecrets(Collections.singletonList(s));
-
-        return p;
-    }
-
-    /**
-     * Creates a password type based credential containing a hashed password secret.
-     *
-     * @param authId The authentication to use.
-     * @param password The password to use.
-     * @param maxBcryptIterations max bcrypt iterations to use.
-     * @return The fully populated credential.
-     */
-    public static PasswordCredential createPasswordCredential(final String authId, final String password,
-            final OptionalInt maxBcryptIterations) {
-        final PasswordCredential p = new PasswordCredential(authId);
-
-        p.setSecrets(Collections.singletonList(createPasswordSecret(password, maxBcryptIterations)));
-
-        return p;
-    }
-
-    /**
-     * Create a password type based credential containing a plain password secret.
-     *
-     * @param authId The authentication to use.
-     * @param password The password to use.
-     * @return The fully populated credential.
-     */
-    public static PasswordCredential createPlainPasswordCredential(final String authId, final String password) {
-        final PasswordCredential p = new PasswordCredential(authId);
-
-        final PasswordSecret secret = new PasswordSecret();
-        secret.setPasswordPlain(password);
-
-        p.setSecrets(Collections.singletonList(secret));
-
-        return p;
-    }
-
-    private static PasswordCredential createPasswordCredential(final String authId, final String password) {
-        return createPasswordCredential(authId, password, OptionalInt.empty());
-    }
-
-    /**
-     * Create a new password secret.
-     *
-     * @param password The password to use.
-     * @param maxBcryptIterations max bcrypt iterations to use.
-     * @return The password secret instance.
-     */
-    public static PasswordSecret createPasswordSecret(final String password, final OptionalInt maxBcryptIterations) {
-        final SpringBasedHonoPasswordEncoder encoder = new SpringBasedHonoPasswordEncoder(
-                maxBcryptIterations.orElse(SpringBasedHonoPasswordEncoder.DEFAULT_BCRYPT_STRENGTH));
-        final EncodedPassword encodedPwd = EncodedPassword.fromHonoSecret(encoder.encode(password));
-
-        final PasswordSecret s = new PasswordSecret();
-        s.setHashFunction(encodedPwd.hashFunction);
-        if (encodedPwd.salt != null) {
-            s.setSalt(Base64.getEncoder().encodeToString(encodedPwd.salt));
+    protected void assertResourceVersion(final OperationResult<?> result) {
+        if (result == null) {
+            return;
         }
-        s.setPasswordHash(encodedPwd.password);
-        return s;
+
+        final var resourceVersion = result.getResourceVersion();
+        assertNotNull(resourceVersion);
+
+        if (result.isError()) {
+            return;
+        }
+
+        if (!supportsResourceVersion()) {
+            return;
+        }
+
+        assertTrue(resourceVersion.isPresent(), "Resource version missing");
     }
 
     /**
-     * Verify that provided secret does contains any of the hash, the salt, or the hash function.
-     * @param secret Secret to check.
+     * Verifies that the secrets of the credentials returned by
+     * {@link CredentialsManagementService#readCredentials(String, String, io.opentracing.Span)}
+     * contain a unique identifier but no confidential information.
+     *
+     * @param credentials The credentials to check.
      */
-    public void assertPasswordSecretDoesNotContainPasswordDetails(final PasswordSecret secret) {
+    protected void assertReadCredentialsResponseProperties(final List<CommonCredential> credentials) {
+        assertThat(credentials).isNotNull();
+        credentials.forEach(creds -> {
+            creds.getSecrets().forEach(secret -> {
+                assertThat(secret.getId()).isNotNull();
+                if (secret instanceof PasswordSecret) {
+                    assertPasswordSecretDoesNotContainPasswordDetails((PasswordSecret) secret);
+                } else if (secret instanceof PskSecret) {
+                    assertThat(((PskSecret) secret).getKey()).isNull();
+                }
+            });
+        });
+    }
+
+    /**
+     * Verifies that a password secret does not contain a hash, salt nor hash function.
+     *
+     * @param secret The secret to check.
+     */
+    protected void assertPasswordSecretDoesNotContainPasswordDetails(final PasswordSecret secret) {
         assertNull(secret.getPasswordHash());
         assertNull(secret.getHashFunction());
         assertNull(secret.getSalt());
+    }
+
+    /**
+     * Verifies that the response returned by the {@link CredentialsService#get(String, String, String)} method
+     * contains the expected standard properties.
+     *
+     * @param response The response to check.
+     * @param expectedDeviceId The expected device identifier.
+     * @param expectedType The expected credentials type.
+     * @param expectedAuthId The expected authentication identifier.
+     */
+    protected void assertGetCredentialsResponseProperties(
+            final JsonObject response,
+            final String expectedDeviceId,
+            final String expectedType,
+            final String expectedAuthId) {
+        assertThat(response).isNotNull();
+        assertThat(response.getString(CredentialsConstants.FIELD_PAYLOAD_DEVICE_ID)).isEqualTo(expectedDeviceId);
+        assertThat(response.getString(CredentialsConstants.FIELD_TYPE)).isEqualTo(expectedType);
+        assertThat(response.getString(CredentialsConstants.FIELD_AUTH_ID)).isEqualTo(expectedAuthId);
+    }
+
+    /**
+     * Verifies that a hashed-password secret returned by {@link CredentialsService#get(String, String, String)}
+     * contains a hash, hash function, optional salt but no plaintext password.
+     *
+     * @param secret The secret to check.
+     * @param expectSalt {@code true} if the credentials are expected to also contain a salt.
+     */
+    protected void assertPwdSecretContainsHash(final JsonObject secret, final boolean expectSalt) {
+        assertThat(secret).isNotNull();
+        assertThat(secret.containsKey(RegistryManagementConstants.FIELD_SECRETS_PWD_PLAIN)).isFalse();
+        assertThat(secret.containsKey(RegistryManagementConstants.FIELD_SECRETS_PWD_HASH)).isTrue();
+        assertThat(secret.containsKey(RegistryManagementConstants.FIELD_SECRETS_HASH_FUNCTION)).isTrue();
+        assertThat(secret.containsKey(RegistryManagementConstants.FIELD_SECRETS_SALT)).isEqualTo(expectSalt);
     }
 
     /**
@@ -338,114 +299,275 @@ public abstract class AbstractCredentialsServiceTest {
     }
 
     /**
-     * Test creating a new secret.
+     * Creates a PSK type based credential containing a psk secret.
+     *
+     * @param authId The authentication to use.
+     * @param psk The psk to use.
+     * @return The fully populated secret.
+     */
+    public static PskCredential createPSKCredential(final String authId, final String psk) {
+        final PskCredential p = new PskCredential(authId);
+
+        final PskSecret s = new PskSecret();
+        s.setKey(psk.getBytes());
+
+        p.setSecrets(Collections.singletonList(s));
+
+        return p;
+    }
+
+    /**
+     * Creates a password type based credential containing a hashed password secret.
+     *
+     * @param authId The authentication to use.
+     * @param password The password to use.
+     * @param maxBcryptIterations max bcrypt iterations to use.
+     * @return The fully populated credential.
+     */
+    public static PasswordCredential createPasswordCredential(final String authId, final String password,
+            final OptionalInt maxBcryptIterations) {
+        final PasswordCredential p = new PasswordCredential(authId);
+
+        p.setSecrets(Collections.singletonList(createPasswordSecret(password, maxBcryptIterations)));
+
+        return p;
+    }
+
+    /**
+     * Create a password type based credential containing a plain password secret.
+     *
+     * @param authId The authentication to use.
+     * @param password The password to use.
+     * @return The fully populated credential.
+     */
+    public static PasswordCredential createPlainPasswordCredential(final String authId, final String password) {
+        final PasswordCredential p = new PasswordCredential(authId);
+
+        final PasswordSecret secret = new PasswordSecret();
+        secret.setPasswordPlain(password);
+
+        p.setSecrets(Collections.singletonList(secret));
+
+        return p;
+    }
+
+    private static PasswordCredential createPasswordCredential(final String authId, final String password) {
+        return createPasswordCredential(authId, password, OptionalInt.empty());
+    }
+
+    /**
+     * Create a new password secret.
+     *
+     * @param password The password to use.
+     * @param maxBcryptIterations max bcrypt iterations to use.
+     * @return The password secret instance.
+     */
+    public static PasswordSecret createPasswordSecret(final String password, final OptionalInt maxBcryptIterations) {
+        final SpringBasedHonoPasswordEncoder encoder = new SpringBasedHonoPasswordEncoder(
+                maxBcryptIterations.orElse(SpringBasedHonoPasswordEncoder.DEFAULT_BCRYPT_STRENGTH));
+        final EncodedPassword encodedPwd = EncodedPassword.fromHonoSecret(encoder.encode(password));
+
+        final PasswordSecret s = new PasswordSecret();
+        s.setHashFunction(encodedPwd.hashFunction);
+        if (encodedPwd.salt != null) {
+            s.setSalt(Base64.getEncoder().encodeToString(encodedPwd.salt));
+        }
+        s.setPasswordHash(encodedPwd.password);
+        return s;
+    }
+
+    /**
+     * Verifies that the service returns 404 if a client wants to retrieve non-existing credentials.
      *
      * @param ctx The vert.x test context.
      */
     @Test
-    public void testCreatePasswordSecret(final VertxTestContext ctx) {
+    public void testGetCredentialsFailsForNonExistingCredentials(final VertxTestContext ctx) {
 
         final var tenantId = "tenant";
         final var deviceId = UUID.randomUUID().toString();
         final var authId = UUID.randomUUID().toString();
-        final var secret = createPasswordCredential(authId, "bar");
+
+        assertGetMissing(ctx, tenantId, deviceId, authId, CredentialsConstants.SECRETS_TYPE_HASHED_PASSWORD, ctx::completeNow);
+    }
+
+    /**
+     * Verifies that the service returns credentials for an existing device.
+     *
+     * @param ctx The vert.x test context.
+     */
+    @Test
+    public void testGetCredentialsSucceedsForExistingDevice(final VertxTestContext ctx) {
+
+        final var tenantId = "tenant";
+        final var deviceId = UUID.randomUUID().toString();
+        final var authId = UUID.randomUUID().toString();
+
+        assertGetMissing(ctx, tenantId, deviceId, authId, CredentialsConstants.SECRETS_TYPE_HASHED_PASSWORD,
+                () -> getDeviceManagementService()
+                        .createDevice(tenantId, Optional.of(deviceId), new Device(), NoopSpan.INSTANCE)
+                        .onComplete(ctx.succeeding(s -> assertGet(ctx, tenantId, deviceId, authId,
+                                CredentialsConstants.SECRETS_TYPE_HASHED_PASSWORD,
+                                r -> {
+                                    assertEquals(HttpURLConnection.HTTP_OK, r.getStatus());
+                                    assertNotNull(r.getPayload());
+                                    assertTrue(r.getPayload().isEmpty());
+                                },
+                                r -> assertEquals(HttpURLConnection.HTTP_NOT_FOUND, r.getStatus()),
+                                ctx::completeNow))));
+    }
+
+    /**
+     * Verifies that the credentials set via
+     * {@link CredentialsManagementService#updateCredentials(String, String, List, Optional, io.opentracing.Span)}
+     * can be retrieved using
+     * {@link CredentialsManagementService#readCredentials(String, String, io.opentracing.Span)} and
+     * {@link CredentialsService#get(String, String, String)}.
+     * Also checks that all secrets of the credentials have a unique identifier set.
+     *
+     * @param ctx The vert.x test context.
+     */
+    @Test
+    public void testUpdateCredentialsSucceeds(final VertxTestContext ctx) {
+
+        final var tenantId = "tenant";
+        final var deviceId = UUID.randomUUID().toString();
+        final var authId = UUID.randomUUID().toString();
+        final var pwdCredentials = createPasswordCredential(authId, "bar");
+        final var pskCredentials = createPSKCredential(authId, "the-shared-key");
 
         //create device and set credentials.
         assertGetMissing(ctx, tenantId, deviceId, authId, CredentialsConstants.SECRETS_TYPE_HASHED_PASSWORD,
                 () -> getDeviceManagementService()
                         .createDevice(tenantId, Optional.of(deviceId), new Device(), NoopSpan.INSTANCE)
-                        .onComplete(ctx.succeeding(s -> getCredentialsManagementService()
-                                .updateCredentials(tenantId, deviceId, Collections.singletonList(secret),
-                                        Optional.empty(), NoopSpan.INSTANCE)
-                                .onComplete(ctx.succeeding(s2 -> ctx.verify(() -> {
-
-                                    assertEquals(HttpURLConnection.HTTP_NO_CONTENT, s2.getStatus());
-                                    assertResourceVersion(s2);
-
-                                    assertGet(ctx, tenantId, deviceId, authId,
-                                            CredentialsConstants.SECRETS_TYPE_HASHED_PASSWORD,
-                                            r -> assertEquals(HttpURLConnection.HTTP_OK, r.getStatus()),
-                                            r -> assertEquals(HttpURLConnection.HTTP_OK, r.getStatus()),
-                                            ctx::completeNow);
-                                }))))));
+                        .compose(response -> getCredentialsManagementService().updateCredentials(
+                                tenantId,
+                                deviceId,
+                                List.of(pwdCredentials, pskCredentials),
+                                Optional.empty(),
+                                NoopSpan.INSTANCE))
+                        .compose(response -> {
+                            ctx.verify(() -> {
+                                assertThat(response.getStatus()).isEqualTo(HttpURLConnection.HTTP_NO_CONTENT);
+                                assertResourceVersion(response);
+                            });
+                            return getCredentialsManagementService().readCredentials(tenantId, deviceId, NoopSpan.INSTANCE);
+                        })
+                        .compose(response -> {
+                            ctx.verify(() -> {
+                                assertThat(response.getStatus()).isEqualTo(HttpURLConnection.HTTP_OK);
+                                assertResourceVersion(response);
+                                assertThat(response.getPayload()).hasSize(2);
+                                assertReadCredentialsResponseProperties(response.getPayload());
+                            });
+                            return getCredentialsService().get(tenantId, CredentialsConstants.SECRETS_TYPE_HASHED_PASSWORD, authId);
+                        })
+                        .compose(response -> {
+                            ctx.verify(() -> {
+                                assertThat(response.getStatus()).isEqualTo(HttpURLConnection.HTTP_OK);
+                                assertGetCredentialsResponseProperties(
+                                        response.getPayload(),
+                                        deviceId,
+                                        CredentialsConstants.SECRETS_TYPE_HASHED_PASSWORD,
+                                        authId);
+                                final JsonArray secrets = response.getPayload().getJsonArray(CredentialsConstants.FIELD_SECRETS);
+                                secrets.stream()
+                                    .map(JsonObject.class::cast)
+                                    .forEach(secret -> assertPwdSecretContainsHash(secret, false));
+                            });
+                            return getCredentialsService().get(tenantId, CredentialsConstants.SECRETS_TYPE_PRESHARED_KEY, authId);
+                        })
+                        .onComplete(ctx.succeeding(response -> {
+                            ctx.verify(() -> {
+                                assertThat(response.getStatus()).isEqualTo(HttpURLConnection.HTTP_OK);
+                                assertGetCredentialsResponseProperties(
+                                        response.getPayload(),
+                                        deviceId,
+                                        CredentialsConstants.SECRETS_TYPE_PRESHARED_KEY,
+                                        authId);
+                                final JsonArray secrets = response.getPayload().getJsonArray(CredentialsConstants.FIELD_SECRETS);
+                                secrets.stream()
+                                    .map(JsonObject.class::cast)
+                                    .forEach(secret -> assertThat(secret.containsKey(CredentialsConstants.FIELD_SECRETS_KEY)));
+                            });
+                            ctx.completeNow();
+                        })));
     }
 
     /**
-     * Test creating a new plain password secret.
+     * Verifies that {@link CredentialsManagementService#updateCredentials(String, String, List, Optional, io.opentracing.Span)}
+     * encodes plaintext passwords contained in hashed-password credentials.
      *
      * @param ctx The vert.x test context.
      */
     @Test
-    public void testCreatePlainPasswordSecret(final VertxTestContext ctx) {
+    public void testUpdateCredentialsEncodesPlaintextPasswords(final VertxTestContext ctx) {
 
         final var tenantId = "tenant";
         final var deviceId = UUID.randomUUID().toString();
         final var authId = UUID.randomUUID().toString();
         final var password = "bar";
-        final var secret = createPlainPasswordCredential(authId, password);
+        final var pwdCredentials = createPlainPasswordCredential(authId, password);
 
         //create device and set credentials.
-        assertGetMissing(ctx, tenantId, deviceId, authId, CredentialsConstants.FIELD_SECRETS_PWD_PLAIN,
+        assertGetMissing(ctx, tenantId, deviceId, authId, RegistryManagementConstants.SECRETS_TYPE_HASHED_PASSWORD,
                 () -> getDeviceManagementService()
                         .createDevice(tenantId, Optional.of(deviceId), new Device(), NoopSpan.INSTANCE)
-                        .onComplete(ctx.succeeding(s -> getCredentialsManagementService()
-                                .updateCredentials(tenantId, deviceId, Collections.singletonList(secret),
-                                        Optional.empty(), NoopSpan.INSTANCE)
-                                .onComplete(ctx.succeeding(s2 -> ctx.verify(() -> {
+                        .compose(response -> getCredentialsManagementService().updateCredentials(
+                                tenantId,
+                                deviceId,
+                                List.of(pwdCredentials),
+                                Optional.empty(),
+                                NoopSpan.INSTANCE))
+                        .onComplete(ctx.succeeding(response -> ctx.verify(() -> {
 
-                                    assertEquals(HttpURLConnection.HTTP_NO_CONTENT, s2.getStatus());
-                                    assertResourceVersion(s2);
+                            assertEquals(HttpURLConnection.HTTP_NO_CONTENT, response.getStatus());
+                            assertResourceVersion(response);
 
-                                    assertGet(ctx, tenantId, deviceId, authId,
-                                            CredentialsConstants.SECRETS_TYPE_HASHED_PASSWORD,
-                                            r -> {
-                                                final List<CommonCredential> credentials = r.getPayload();
-                                                assertEquals(1, credentials.size());
-                                                final List<PasswordSecret> secrets = ((PasswordCredential) credentials
-                                                        .get(0)).getSecrets();
-                                                assertEquals(1, secrets.size());
-                                                assertNotNull(JsonObject.mapFrom(secrets.get(0))
-                                                        .getString(RegistryManagementConstants.FIELD_ID));
-                                                assertPasswordSecretDoesNotContainPasswordDetails(secrets.get(0));
-                                                assertNull(secrets.get(0).getPasswordPlain());
-                                                assertEquals(HttpURLConnection.HTTP_OK, r.getStatus());
-                                            },
-                                            r -> assertEquals(HttpURLConnection.HTTP_OK, r.getStatus()),
-                                            ctx::completeNow);
-                                }))))));
-    }
-
-    private void assertResourceVersion(final OperationResult<?> result) {
-        if (result == null) {
-            return;
-        }
-
-        final var resourceVersion = result.getResourceVersion();
-        assertNotNull(resourceVersion);
-
-        if (result.isError()) {
-            return;
-        }
-
-        if (!supportsResourceVersion()) {
-            return;
-        }
-
-        assertTrue(resourceVersion.isPresent(), "Resource version missing");
+                            assertGet(ctx, tenantId, deviceId, authId,
+                                    RegistryManagementConstants.SECRETS_TYPE_HASHED_PASSWORD,
+                                    r -> {
+                                        assertThat(r.getStatus()).isEqualTo(HttpURLConnection.HTTP_OK);
+                                        final List<CommonCredential> credentials = r.getPayload();
+                                        assertEquals(1, credentials.size());
+                                        final List<PasswordSecret> secrets = ((PasswordCredential) credentials
+                                                .get(0)).getSecrets();
+                                        assertEquals(1, secrets.size());
+                                        assertNotNull(secrets.get(0).getId());
+                                        assertPasswordSecretDoesNotContainPasswordDetails(secrets.get(0));
+                                        assertNull(secrets.get(0).getPasswordPlain());
+                                    },
+                                    r -> {
+                                        assertThat(r.getStatus()).isEqualTo(HttpURLConnection.HTTP_OK);
+                                        assertGetCredentialsResponseProperties(
+                                                r.getPayload(),
+                                                deviceId,
+                                                CredentialsConstants.SECRETS_TYPE_HASHED_PASSWORD,
+                                                authId);
+                                        final JsonArray secrets = r.getPayload().getJsonArray(CredentialsConstants.FIELD_SECRETS);
+                                        secrets.stream()
+                                            .map(JsonObject.class::cast)
+                                            .forEach(secret -> assertPwdSecretContainsHash(secret, false));
+                                    },
+                                    ctx::completeNow);
+                        }))));
     }
 
     /**
-     * Test updating a new secret.
+     * Verifies that {@link CredentialsManagementService#updateCredentials(String, String, List, Optional, io.opentracing.Span)}
+     * replaces existing credentials with credentials having the same type and auth-id.
      *
      * @param ctx The vert.x test context.
      */
     @Test
-    public void testUpdatePasswordSecret(final VertxTestContext ctx) {
+    public void testUpdateCredentialsReplacesCredentialsOfSameTypeAndAuthId(final VertxTestContext ctx) {
 
         final var tenantId = "tenant";
         final var deviceId = UUID.randomUUID().toString();
         final var authId = UUID.randomUUID().toString();
-        final var secret = createPasswordCredential(authId, "bar");
+        final var initialCredentials = createPasswordCredential(authId, "bar");
+
+        final Checkpoint assertionsSucceeded = ctx.checkpoint(1);
 
         final Promise<?> phase1 = Promise.promise();
 
@@ -455,7 +577,7 @@ public abstract class AbstractCredentialsServiceTest {
                 () -> getDeviceManagementService()
                         .createDevice(tenantId, Optional.of(deviceId), new Device(), NoopSpan.INSTANCE)
                         .onComplete(ctx.succeeding(s -> getCredentialsManagementService()
-                                .updateCredentials(tenantId, deviceId, Collections.singletonList(secret),
+                                .updateCredentials(tenantId, deviceId, Collections.singletonList(initialCredentials),
                                         Optional.empty(), NoopSpan.INSTANCE)
                                 .onComplete(ctx.succeeding(s2 -> ctx.verify(() -> {
 
@@ -472,41 +594,44 @@ public abstract class AbstractCredentialsServiceTest {
 
         // phase 2 - try to update
 
-        phase1.future().onComplete(ctx.succeeding(v -> {
+        phase1.future().compose(v -> {
 
             final var newSecret = createPasswordCredential(authId, "baz");
 
-            getCredentialsManagementService().updateCredentials(tenantId, deviceId,
+            return getCredentialsManagementService().updateCredentials(tenantId, deviceId,
                     Collections.singletonList(newSecret), Optional.empty(),
-                    NoopSpan.INSTANCE)
-                    .onComplete(ctx.succeeding(s -> ctx.verify(() -> {
+                    NoopSpan.INSTANCE);
+        })
+        .onComplete(ctx.succeeding(s -> ctx.verify(() -> {
 
-                        assertEquals(HttpURLConnection.HTTP_NO_CONTENT, s.getStatus());
+            assertEquals(HttpURLConnection.HTTP_NO_CONTENT, s.getStatus());
 
-                        assertGet(ctx, tenantId, deviceId, authId, CredentialsConstants.SECRETS_TYPE_HASHED_PASSWORD,
-                                r -> {
-                                    assertEquals(HttpURLConnection.HTTP_OK, r.getStatus());
-                                },
-                                r -> {
-                                    assertEquals(HttpURLConnection.HTTP_OK, r.getStatus());
-                                },
-                                ctx::completeNow);
-                    })));
-
-        }));
-
+            assertGet(ctx, tenantId, deviceId, authId, CredentialsConstants.SECRETS_TYPE_HASHED_PASSWORD,
+                    r -> {
+                        assertEquals(HttpURLConnection.HTTP_OK, r.getStatus());
+                        assertThat(r.getPayload()).hasSize(1);
+                    },
+                    r -> {
+                        assertEquals(HttpURLConnection.HTTP_OK, r.getStatus());
+                        assertGetCredentialsResponseProperties(r.getPayload(), deviceId, CredentialsConstants.SECRETS_TYPE_HASHED_PASSWORD, authId);
+                    },
+                    assertionsSucceeded::flag);
+        })));
     }
 
     /**
-     * Test updating a secret but providing the wrong version.
+     * Verifies that {@link CredentialsManagementService#updateCredentials(String, String, List, Optional, io.opentracing.Span)}
+     * returns a 412 status code if the request contains a resource version that doesn't match the
+     * version of the credentials on record.
+     *
      * @param ctx The vert.x test context.
      */
     @Test
-    public void testUpdateCredentialWithWrongResourceVersionFails(final VertxTestContext ctx) {
+    public void testUpdateCredentialsFailsForWrongResourceVersion(final VertxTestContext ctx) {
         final var tenantId = "tenant";
         final var deviceId = UUID.randomUUID().toString();
         final var authId = UUID.randomUUID().toString();
-        final var secret = createPasswordCredential(authId, "bar");
+        final var pwdCredentials = createPasswordCredential(authId, "bar");
 
         final Checkpoint checkpoint = ctx.checkpoint(3);
 
@@ -523,38 +648,36 @@ public abstract class AbstractCredentialsServiceTest {
 
         // phase 2 - set credentials
 
-        final Promise<?> phase2 = Promise.promise();
+        final Promise<String> phase2 = Promise.promise();
 
-        phase1.future().onComplete(ctx.succeeding(s1 -> {
+        phase1.future().onSuccess(s1 -> {
 
                 getCredentialsManagementService().updateCredentials(tenantId, deviceId,
-                        Collections.singletonList(secret), Optional.empty(),
-                        NoopSpan.INSTANCE)
+                        List.of(pwdCredentials), Optional.empty(), NoopSpan.INSTANCE)
                         .onComplete(ctx.succeeding(s2 -> {
-
-                            checkpoint.flag();
-
                             ctx.verify(() -> {
-
                                 assertEquals(HttpURLConnection.HTTP_NO_CONTENT, s2.getStatus());
-                                phase2.complete();
+                                assertResourceVersion(s2);
                             });
+                            checkpoint.flag();
+                            phase2.complete(s2.getResourceVersion().get());
                         }));
 
-        }));
+        });
 
         // phase 3 - update with wrong version
 
-        phase2.future().onComplete(ctx.succeeding(v -> getCredentialsManagementService()
-                .updateCredentials(tenantId, deviceId, Collections.singletonList(secret),
-                        Optional.of(UUID.randomUUID().toString()),
-                        NoopSpan.INSTANCE)
-                .onComplete(ctx.succeeding(s -> ctx.verify(() -> {
-
-                    assertEquals(HttpURLConnection.HTTP_PRECON_FAILED, s.getStatus());
-                    checkpoint.flag();
-
-                })))));
+        phase2.future()
+            .compose(resourceVersion -> getCredentialsManagementService().updateCredentials(
+                    tenantId,
+                    deviceId,
+                    List.of(pwdCredentials),
+                    Optional.of("other_" + resourceVersion),
+                    NoopSpan.INSTANCE))
+            .onComplete(ctx.succeeding(s -> ctx.verify(() -> {
+                assertEquals(HttpURLConnection.HTTP_PRECON_FAILED, s.getStatus());
+                checkpoint.flag();
+            })));
     }
 
     /**
@@ -720,59 +843,6 @@ public abstract class AbstractCredentialsServiceTest {
     }
 
     /**
-     * Verify that created secrets contains an ID.
-     *
-     * @param ctx The vert.x test context.
-     */
-    @Test
-    public void testReturnedSecretContainAnId(final VertxTestContext ctx) {
-
-        final String tenantId = UUID.randomUUID().toString();
-        final String deviceId = UUID.randomUUID().toString();
-        final String authId = UUID.randomUUID().toString();
-
-        final CommonCredential credential = createPasswordCredential(authId, "bar");
-
-        final List<CommonCredential> credentials = Arrays.asList(credential);
-
-        // create device & set credentials
-
-        final Promise<?> phase1 = Promise.promise();
-
-        getDeviceManagementService()
-                .createDevice(tenantId, Optional.of(deviceId), new Device(), NoopSpan.INSTANCE)
-                .onComplete(ctx.succeeding(n -> getCredentialsManagementService()
-                        .updateCredentials(tenantId, deviceId, credentials, Optional.empty(), NoopSpan.INSTANCE)
-                        .onComplete(ctx.succeeding(s -> phase1.complete()))));
-
-        // validate credentials - contains an ID.
-
-        final Promise<?> phase2 = Promise.promise();
-
-        phase1.future().onComplete(ctx.succeeding(n -> {
-            getCredentialsService().get(tenantId, CredentialsConstants.SECRETS_TYPE_HASHED_PASSWORD, authId)
-                    .onComplete(ctx.succeeding(s -> ctx.verify(() -> {
-
-                        assertEquals(HttpURLConnection.HTTP_OK, s.getStatus());
-
-                        final CredentialsObject creds = s.getPayload().mapTo(CredentialsObject.class);
-
-                        assertEquals(authId, creds.getAuthId());
-                        assertEquals(CredentialsConstants.SECRETS_TYPE_HASHED_PASSWORD, creds.getType());
-                        assertEquals(1, creds.getSecrets().size());
-                        assertNotNull(
-                                creds.getSecrets().getJsonObject(0).getString(RegistryManagementConstants.FIELD_ID));
-
-                        phase2.complete();
-                    })));
-        }));
-
-        // finally complete
-
-        phase2.future().onComplete(ctx.succeeding(s -> ctx.completeNow()));
-    }
-
-    /**
      * Verify that updating a secret using a wrong secret ID fails with a `400 Bad Request`.
      *
      * @param ctx The vert.x test context.
@@ -786,8 +856,6 @@ public abstract class AbstractCredentialsServiceTest {
 
         final CommonCredential credential = createPasswordCredential(authId, "bar");
 
-        final List<CommonCredential> credentials = Arrays.asList(credential);
-
         // create device & set credentials
 
         final Promise<?> phase1 = Promise.promise();
@@ -795,7 +863,7 @@ public abstract class AbstractCredentialsServiceTest {
         getDeviceManagementService()
                 .createDevice(tenantId, Optional.of(deviceId), new Device(), NoopSpan.INSTANCE)
                 .onComplete(ctx.succeeding(n -> getCredentialsManagementService()
-                .updateCredentials(tenantId, deviceId, credentials, Optional.empty(), NoopSpan.INSTANCE)
+                .updateCredentials(tenantId, deviceId, List.of(credential), Optional.empty(), NoopSpan.INSTANCE)
                 .onComplete(ctx.succeeding(s -> phase1.complete()))));
 
         // re-set credentials with wrong ID
@@ -820,70 +888,13 @@ public abstract class AbstractCredentialsServiceTest {
     }
 
     /**
-     * Verify that secrets returned by the management methods do not
-     * contains secrets details for hashed passwords.
+     * Verifies that existing secrets are deleted when their IDs are not contained
+     * in the request payload.
      *
      * @param ctx The vert.x test context.
      */
     @Test
-    public void testHashedPasswordsDetailsAreRemoved(final VertxTestContext ctx) {
-
-        final String tenantId = UUID.randomUUID().toString();
-        final String deviceId = UUID.randomUUID().toString();
-        final String authId = UUID.randomUUID().toString();
-
-        final CommonCredential credential = createPasswordCredential(authId, "bar");
-
-        final List<CommonCredential> credentials = Arrays.asList(credential);
-
-        // create device & set credentials
-
-        final Promise<?> phase1 = Promise.promise();
-
-        getDeviceManagementService()
-                .createDevice(tenantId, Optional.of(deviceId), new Device(), NoopSpan.INSTANCE)
-                .onComplete(ctx.succeeding(n -> getCredentialsManagementService()
-                        .updateCredentials(tenantId, deviceId, credentials, Optional.empty(), NoopSpan.INSTANCE)
-                        .onComplete(ctx.succeeding(s -> phase1.complete()))));
-
-        // validate credentials - do not contain the secret details.
-
-        final Promise<?> phase2 = Promise.promise();
-
-        phase1.future().onComplete(ctx.succeeding(n ->
-                getCredentialsManagementService().readCredentials(tenantId, deviceId, NoopSpan.INSTANCE)
-                        .onComplete(ctx.succeeding(s -> ctx.verify(() -> {
-
-                            assertEquals(HttpURLConnection.HTTP_OK, s.getStatus());
-
-                            final List<CommonCredential> creds = s.getPayload();
-                            assertEquals(1, creds.size());
-
-                            final CommonCredential cred = creds.get(0);
-                            assertEquals(authId, cred.getAuthId());
-                            assertTrue(cred instanceof PasswordCredential);
-                            assertEquals(1, ((PasswordCredential) cred).getSecrets().size());
-                            final PasswordSecret secret = ((PasswordCredential) cred).getSecrets().get(0);
-                            assertNull(secret.getPasswordHash());
-                            assertNull(secret.getSalt());
-                            assertNull(secret.getHashFunction());
-
-                            phase2.complete();
-                        })))));
-
-        // finally complete
-
-        phase2.future().onComplete(ctx.succeeding(s -> ctx.completeNow()));
-    }
-
-    /**
-     * Verify that an existing secret is deleted when it's ID is removed
-     * from the SET payload.
-     *
-     * @param ctx The vert.x test context.
-     */
-    @Test
-    public void testSecretsWithMissingIDsAreRemoved(final VertxTestContext ctx) {
+    public void testUpdateCredentialsSupportsRemovingExistingSecrets(final VertxTestContext ctx) {
 
         final String tenantId = UUID.randomUUID().toString();
         final String deviceId = UUID.randomUUID().toString();
@@ -983,12 +994,12 @@ public abstract class AbstractCredentialsServiceTest {
     }
 
     /**
-     * Verify that the ID of a secret is still the same when the secret is updated.
+     * Verifies that a credential's existing secrets can be updated using their IDs.
      *
      * @param ctx The vert.x test context.
      */
     @Test
-    public void testSecretsIDisNotChangedWhenSecretIsUpdated(final VertxTestContext ctx) {
+    public void testUpdateCredentialsSupportsUpdatingExistingSecrets(final VertxTestContext ctx) {
 
         final String tenantId = UUID.randomUUID().toString();
         final String deviceId = UUID.randomUUID().toString();
